Update: Allow Drawer item text alignment to inherit from course language (fixes #107) #109

--- a/less/languagePicker.less
+++ b/less/languagePicker.less
@@ -6,14 +6,6 @@
   }
 }
 
-// Language Picker drawer
-// --------------------------------------------------
-.languagepicker-drawer {
-  &__item.is-rtl {
-    direction: rtl;
-  }
-}
-
 // Notify direction amends
 // --------------------------------------------------
 .notify {
